--- a/css/mega-menu/mega_menu.css
+++ b/css/mega-menu/mega_menu.css
@@ -59,7 +59,7 @@
   display: block;
   float: left;
   width: 100%;
-  background-color: transparent;
+  background-color: rgb(0, 0, 0);
 }
 .mega-menu .menu-logo {
   /*----------------------------------- MENU LOGO */
@@ -137,7 +137,7 @@
 .mega-menu .menu-logo > li > a img {
   /*--------------------------------------- LOGO IMAGE ICON */
  /* width: 20px;
-  height: 20px;
+  */ /*! height: 20px; */ /*
   position: absolute;
   top: 0;
   left: 15px;
@@ -150,6 +150,7 @@
   padding: 0;
   display: block;
   float: right;
+  /*! margin-top: 3%; */
 }
 @media screen and (max-width: 992px) {
   .mega-menu .menu-links {
@@ -696,7 +697,7 @@
     visibility: hidden;
     border-top:5px solid #ffd200;
     border-radius: 0px !important;
-	background:rgba(21,21,21,0.9);
+  background:rgba(21,21,21,0.9);
     box-shadow: 0 0px 0px 1px rgba(0, 0, 0, 0.05);
   }
 }
@@ -1407,7 +1408,7 @@
     width: 100%;
   }
   .mega-menu.desktopTopFixed .menu-list-items .menu-logo > li > a img {
-    height:35px;
+    /* height:35px; */
     padding-top: 0px;
     /*margin: 15px 0px;*/
     /*width: 75%;*/
@@ -1568,7 +1569,7 @@
     /*------------------------------------------- DROP DOWN EFFECTS :::: fade-effect */
     opacity: 1;
     visibility: visible;
-	margin-top:0;
+  margin-top:0;
   }
   .mega-menu .menu-links li.hoverTrigger:hover > .drop-down.effect-scale,
   .mega-menu .menu-links li.hoverTrigger:hover > .drop-down-tab-bar.effect-scale,
