--- a/revolution/css/settings.css
+++ b/revolution/css/settings.css
@@ -163,7 +163,7 @@
 
 .tp-simpleresponsive img,
 .rev_slider img{
-	max-width:none !important;
+	max-width:100% !important;
 	-moz-transition: none;
 	-webkit-transition: none;
 	-o-transition: none;
